updated get user endpoint
